started profile fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,28 +9,44 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="55dp"
         android:fillViewport="true"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/btnProfileImage"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/tzuyu"
+                app:civ_border_color="#FFFFFF"
+                app:civ_border_width="1dp" />
+
+
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
+                android:layout_width="wrap_content"
+                android:layout_height="239dp"
                 android:elevation="-90dp"
                 android:fadingEdge="none"
 
                 android:fadingEdgeLength="100dp"
                 android:requiresFadingEdge="none"
-                android:src="@drawable/temple_heaven_768" />
+                android:src="@drawable/forbidden_city_small" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
+                android:layout_marginTop="8dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -39,11 +55,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="36dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="32dp"
                     android:layout_marginRight="0dp"
+                    android:layout_marginBottom="144dp"
                     android:fontFamily="@font/quicksand_bold"
-                    android:text="Lingo Pal"
+                    android:text="@string/home_title"
                     android:textColor="#FFFFFF"
                     android:textSize="36sp" />
 
@@ -74,7 +91,7 @@
                                 android:letterSpacing="0.1"
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
-                                android:text="LEVEL 1"
+                                android:text="@string/numbers_level"
                                 android:textSize="10dp"
                                 android:textStyle="bold" />
 
@@ -84,7 +101,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Numbers"
+                                android:text="@string/numbers_title"
                                 android:textSize="24sp" />
 
                             <TextView
@@ -93,7 +110,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Learn how to count. 3, 2, 1, let's go!" />
+                                android:text="@string/numbers_description" />
 
                         </LinearLayout>
 
@@ -117,7 +134,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
-                                android:text="START" />
+                                android:text="@string/button_start" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -150,7 +167,7 @@
                                 android:letterSpacing="0.1"
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
-                                android:text="LEVEL 2"
+                                android:text="@string/greetings_level"
                                 android:textSize="10dp"
                                 android:textStyle="bold" />
 
@@ -160,7 +177,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Greetings"
+                                android:text="@string/greetings_title"
                                 android:textSize="24sp" />
 
                             <TextView
@@ -169,7 +186,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Learn how to meet and greet your new friends!" />
+                                android:text="@string/greetings_description" />
 
                         </LinearLayout>
 
@@ -193,7 +210,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
-                                android:text="START" />
+                                android:text="@string/button_start" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -226,7 +243,7 @@
                                 android:letterSpacing="0.1"
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
-                                android:text="LEVEL 2"
+                                android:text="@string/food_level"
                                 android:textSize="10dp"
                                 android:textStyle="bold" />
 
@@ -236,7 +253,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Food"
+                                android:text="@string/food_title"
                                 android:textSize="24sp" />
 
                             <TextView
@@ -245,7 +262,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="Learn to order Maccas and some weird shit!" />
+                                android:text="@string/food_description" />
 
                         </LinearLayout>
 
@@ -269,7 +286,83 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
-                                android:text="START" />
+                                android:text="@string/button_start" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="4dp"
+                    app:contentPadding="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txtLevelThree"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="8dp"
+                                android:letterSpacing="0.1"
+                                android:lineSpacingExtra="0dp"
+                                android:padding="0dp"
+                                android:text="@string/emergency_level"
+                                android:textSize="10dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/textView5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/emergency_title"
+                                android:textSize="24sp" />
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="192dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="8dp"
+                                android:text="@string/emergency_description" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ivFood"
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:layout_marginLeft="0dp"
+                                android:layout_marginTop="16dp"
+                                android:src="@android:mipmap/sym_def_app_icon" />
+
+                            <Button
+                                android:id="@+id/btnStartHelp"
+                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:text="@string/button_start" />
                         </LinearLayout>
                     </LinearLayout>
 
