--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,24 +2,26 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape
+            android:elevation="16dp"
             android:shape="ring"
             android:thicknessRatio="15"
             android:useLevel="false">
-            <solid android:color="#DDDDDD" />
+            <solid android:color="#FFFFFF" />
         </shape>
     </item>
     <item>
         <rotate
             android:fromDegrees="270"
-            android:toDegrees="270"
             android:pivotX="50%"
-            android:pivotY="50%" >
+            android:pivotY="50%"
+            android:toDegrees="270">
             >
             <shape
+                android:elevation="16dp"
                 android:shape="ring"
                 android:thicknessRatio="15"
                 android:useLevel="true">
-                <solid android:color="#8BC34A" />
+                <solid android:color="@color/colorGreen" />
             </shape>
         </rotate>
     </item>
