--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -61,6 +61,7 @@
                     style="?android:progressBarStyleHorizontal"
                     android:layout_width="92dp"
                     android:layout_height="92dp"
+                    android:elevation="16dp"
                     android:progress="0"
                     android:progressDrawable="@drawable/circle"
                     android:translationZ="90dp"
@@ -81,9 +82,10 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:clickable="true"
+                    android:elevation="8dp"
                     android:focusable="auto"
                     android:src="@drawable/baseline_done_white_48"
-                    app:backgroundTint="#8BC34A"
+                    app:backgroundTint="@color/colorGreen"
                     app:fabCustomSize="64dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +119,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:maxImageSize="24dp"
                     app:pressedTranslationZ="0dp"
-                    app:rippleColor="@android:color/holo_blue_light" />
+                    app:rippleColor="@color/colorBlue" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fabSave"
@@ -135,7 +137,7 @@
                     android:elevation="0dp"
                     android:focusable="auto"
                     android:src="@drawable/outline_bookmark_border_white_48"
-                    android:tint="@android:color/holo_orange_light"
+                    android:tint="@color/colorYellow"
                     app:backgroundTint="@android:color/transparent"
                     app:borderWidth="0dp"
                     app:elevation="0dp"
