--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:id="@+id/txtChineseCharacter"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="128dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center|center_horizontal|center_vertical"
                 android:text="@string/phrase_placeholder"
@@ -36,19 +36,10 @@
                 android:textSize="64dp" />
 
             <TextView
-                android:id="@+id/txtPinyin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="pinyin"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-
-            <TextView
                 android:id="@+id/txtProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
                 android:text="@string/progress_placeholder"
                 android:textAlignment="textStart" />
 
@@ -56,97 +47,99 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:progressBarStyleHorizontal"
-                    android:layout_width="92dp"
-                    android:layout_height="92dp"
-                    android:progress="0"
-                    android:progressDrawable="@drawable/circle"
-                    android:translationZ="90dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/fabDone"
-                    app:layout_constraintEnd_toEndOf="@+id/fabDone"
-                    app:layout_constraintHorizontal_bias="0.464"
-                    app:layout_constraintStart_toStartOf="@+id/fabDone"
-                    app:layout_constraintTop_toTopOf="@+id/fabDone" />
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabDone"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
-                    android:focusable="auto"
-                    android:src="@drawable/baseline_done_white_48"
-                    app:backgroundTint="#8BC34A"
-                    app:fabCustomSize="64dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView3"
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@color/colorGreen"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="32dp"
+                    app:cardElevation="8dp"
+                    app:cardMaxElevation="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@+id/rbGroup">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabAnswer"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView2"
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
                     android:elevation="0dp"
-                    android:focusable="auto"
-                    android:src="@drawable/outline_visibility_off_white_48"
-                    android:tint="@android:color/holo_blue_light"
-                    app:backgroundTint="@android:color/transparent"
-                    app:borderWidth="0dp"
-                    app:elevation="0dp"
-                    app:fabCustomSize="64dp"
-                    app:hoveredFocusedTranslationZ="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:cardCornerRadius="32dp"
+                    app:cardElevation="8dp"
+                    app:cardMaxElevation="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:maxImageSize="24dp"
-                    app:pressedTranslationZ="0dp"
-                    app:rippleColor="@android:color/holo_blue_light" />
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabSave"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
-                    android:elevation="0dp"
-                    android:focusable="auto"
-                    android:src="@drawable/outline_bookmark_border_white_48"
-                    android:tint="@android:color/holo_orange_light"
-                    app:backgroundTint="@android:color/transparent"
-                    app:borderWidth="0dp"
-                    app:elevation="0dp"
-                    app:fabCustomSize="64dp"
-                    app:hoveredFocusedTranslationZ="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:maxImageSize="24dp"
-                    app:pressedTranslationZ="0dp"
-                    app:rippleColor="@android:color/holo_orange_dark" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardView3">
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="32dp"
+                    app:cardElevation="8dp"
+                    app:cardMaxElevation="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+                </androidx.cardview.widget.CardView>
+
+                <RadioGroup
+                    android:id="@+id/rbGroup"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:elevation="10dp"
+                    android:padding="0dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <RadioButton
+                        android:id="@+id/rbAnswerOne"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:elevation="10dp"
+                        android:text="answerOne" />
+
+                    <RadioButton
+                        android:id="@+id/rbAnswerTwo"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:elevation="10dp"
+                        android:text="answerTwo" />
+
+                    <RadioButton
+                        android:id="@+id/rbAnswerThree"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:elevation="10dp"
+                        android:text="answerThree" />
+
+                </RadioGroup>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
@@ -167,38 +160,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnDropTable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="droptable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <Button
-        android:id="@+id/btnAddValues"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:text="addvalues"
-        app:layout_constraintEnd_toStartOf="@+id/btnShowValues"
-        app:layout_constraintStart_toEndOf="@+id/btnDropTable"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <Button
-        android:id="@+id/btnShowValues"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="showvalues"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -214,5 +175,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLevelTitle" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSubmitAnswer"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="18dp"
+        android:layout_marginTop="2dp"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:focusable="auto"
+        android:src="@drawable/baseline_done_white_48"
+        app:backgroundTint="@color/colorGreen"
+        app:elevation="8dp"
+        app:fabCustomSize="64dp"
+        app:layout_constraintBottom_toBottomOf="@+id/pbTest"
+        app:layout_constraintEnd_toEndOf="@+id/pbTest"
+        app:layout_constraintStart_toStartOf="@+id/pbTest"
+        app:layout_constraintTop_toTopOf="@+id/pbTest"
+        app:layout_constraintVertical_bias="0.25" />
+
+    <ProgressBar
+        android:id="@+id/pbTest"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="335dp"
+        android:elevation="8dp"
+        android:progress="0"
+        android:progressDrawable="@drawable/circle"
+        android:translationZ="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
