--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/btnProfileImage"
+                android:elevation="4dp"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
