--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
         android:fillViewport="true"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -18,136 +19,194 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="275dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:fontFamily="@font/quicksand_bold"
                     android:text="Welcome back, Nicholas!"
                     android:textAlignment="viewStart"
-                    android:textSize="36sp" />
+                    android:textSize="36sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivProfileImage"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
                     android:elevation="4dp"
                     android:src="@drawable/tzuyu"
                     app:civ_border_color="#FFFFFF"
-                    app:civ_border_width="1dp" />
+                    app:civ_border_width="1dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/quicksand_bold"
                 android:text="Revise"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <LinearLayout
+            <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="165dp"
-                    android:layout_height="165dp"
-                    android:layout_margin="8dp"
-                    android:layout_marginLeft="16dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-                    app:cardMaxElevation="4dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fadeScrollbars="false"
+                    android:orientation="horizontal"
+                    android:scrollbars="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="165dp"
+                        android:layout_margin="8dp"
                         android:layout_marginLeft="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginRight="16dp"
-                        android:orientation="vertical">
+                        app:cardCornerRadius="4dp"
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
 
-                        <TextView
-                            android:id="@+id/textView7"
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-medium"
-                            android:text="Saved"
-                            android:textSize="20sp" />
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textView11"
+                            <TextView
+                                android:id="@+id/textView7"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="Saved"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:id="@+id/textView11"
+                                android:layout_width="match_parent"
+                                android:layout_height="65dp"
+                                android:layout_marginTop="8dp"
+                                android:text="Still unsure of some words? Let's take another look!" />
+
+                            <Button
+                                android:id="@+id/btnStartSaved"
+                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:text="@string/button_start" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="165dp"
+                        android:layout_margin="8dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:cardCornerRadius="4dp"
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
+
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="65dp"
-                            android:layout_marginTop="8dp"
-                            android:text="Still unsure of some words? Let's take another look!" />
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp"
+                            android:orientation="vertical">
 
-                        <Button
-                            android:id="@+id/btnStartSaved"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:text="@string/button_start" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/textView8"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="Mastered"
+                                android:textSize="20sp" />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="165dp"
-                    android:layout_height="165dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="4dp"
-                    app:cardMaxElevation="4dp">
+                            <TextView
+                                android:id="@+id/textView12"
+                                android:layout_width="match_parent"
+                                android:layout_height="65dp"
+                                android:layout_marginTop="8dp"
+                                android:text="These are the words you're familiar with!" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginRight="16dp"
-                        android:orientation="vertical">
+                            <Button
+                                android:id="@+id/btnStartLearned"
+                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:text="@string/button_start" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
 
-                        <TextView
-                            android:id="@+id/textView8"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="165dp"
+                        android:layout_margin="8dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:cardCornerRadius="4dp"
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
+
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-medium"
-                            android:text="Mastered"
-                            android:textSize="20sp" />
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textView12"
-                            android:layout_width="match_parent"
-                            android:layout_height="65dp"
-                            android:layout_marginTop="8dp"
-                            android:text="These are the words you're familiar with!" />
+                            <TextView
+                                android:id="@+id/textView8"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="Mastered"
+                                android:textSize="20sp" />
 
-                        <Button
-                            android:id="@+id/btnStartLearned"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:text="@string/button_start" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/textView12"
+                                android:layout_width="match_parent"
+                                android:layout_height="65dp"
+                                android:layout_marginTop="8dp"
+                                android:text="These are the words you're familiar with!" />
 
-            </LinearLayout>
+                            <Button
+                                android:id="@+id/btnStartLearned"
+                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="right"
+                                android:text="@string/button_start" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <TextView
                 android:id="@+id/textView9"
